# rustos

./: .gitignore  DESIGN.md
kernel/: Cargo.toml  Makefile
kernel/src/: lib.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: boot.asm  long_mode_start.asm  multiboot_header.asm
kernel/src/arch/x86_64/boot/: boot.asm  linker.ld  long_mode_start.asm
kernel/src/chk/: mod.rs
kernel/src/mem/: area_frame_allocator.rs  mod.rs
kernel/src/mem/paging/: entry.rs  mod.rs  table.rs  temporary_page.rs
kernel/src/vga/: mod.rs
